Issue#1733 city confirmation (#1734)
* Fixed incorrectly working geolocation confirmation

* Fixed saving geolocation to local storage before user confirmation

* Added change of geolocation to standard (Kyiv) when clicking on the  "Change" button

* Added focus to the search input when clicking on the "Change" button

* Fixed cropped cross icon

* Removed wrapping of additional text about the city

* Reduced the width of the sliced text

* Fixed saving geolocation when location is forbidden

* Added a condition when Kyiv is already in the search, and we only need to call the list of available places without a request

--- a/src/app/shared/components/filters-list/city-filter/city-filter.component.scss
+++ b/src/app/shared/components/filters-list/city-filter/city-filter.component.scss
@@ -20,6 +20,7 @@
 .additional-text {
   opacity: .5;
   margin: 0;
+  white-space: nowrap;
 }
 
 h4{
